--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,9 @@ a:hover, a:focus {
 .badge:not(.badge-pill) {
   border-radius: 3px;
 }
-
+.btn {
+  cursor: pointer !important;
+}
 .btn[class*='btn-']:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
