--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,3 +35,10 @@ animation: lds-hourglass 1.2s infinite;
 #formLoading, #formSuccess {
     display: none;
 }
+
+#formSuccess .icon-message.error{
+    color: #943636;
+}
+#formSuccess .icon-message{
+    color: #4d9436;
+}
