logo animada loading

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -144,3 +144,7 @@ animation: lds-hourglass 1.2s infinite;
         width: 100%;
         z-index: -1;
       }
+
+      video{
+            -webkit-filter: brightness(130%); 
+    }
