--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -148,3 +148,7 @@ animation: lds-hourglass 1.2s infinite;
       video{
             -webkit-filter: brightness(130%); 
     }
+    #Loader {
+        width: 150px;
+        height: auto;
+    }
