--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,7 @@ a:hover, a:focus {
 
 .znav-container ul li a:not(.btn) {
   display: block;
-  padding: 0.4rem 1.2rem;
+  padding: 0.4rem 1.2rem 0.4rem 0.2rem;
   -webkit-transition: color 0.2s ease-in-out;
   -o-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
