--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8607,6 +8607,155 @@ p {
   transition: .5s;
 }
 
+.logos{
+  max-width: 100px;
+}
+
+@media (max-width: 992px) {
+  .logos{
+    margin-top: 30px!important;
+  }
+  .hero {
+    width: 350px!important;
+    margin-top: 15px;
+  }
+  .heroC {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.info > span > i {
+  background-color: rgb(255,104,95);
+  width: 46px;
+  height: 46px;
+  display: inline-block;
+  text-align: center;
+  line-height: 46px;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 22px;
+  margin-right: 15px;
+}
+
+.info > span > a {
+    color: #ff685f;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    text-transform: none;
+    text-decoration: none!important;
+  }
+
+  .socialmedia {
+    width: 32px;
+    height: 32px;
+    margin: 0 5px;
+    background-color: #03a4ed;
+    color: #fff !important;
+    border-radius: 50%;
+    text-align: center;
+    display: inline-block;
+    line-height: 32px;
+    font-size: 15px;
+  }
+  
+  .socialmedia:hover {
+    background-color: #ff695f;
+  }
+
+  form#contact {
+    margin-left: -100px;
+    position: relative;
+    z-index: 2;
+    background-image: url(../../assets/images/landing/contact-form-bg.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+    padding: 60px 120px;
+    border-radius: 20px;
+  }
+  
+  form#contact input {
+    width: 100%;
+    height: 46px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom: 1px solid #9bdbf8;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    font-size: 15px;
+    font-weight: 300;
+    color: #2a2a2a;
+    padding: 0px 0px;
+    margin-bottom: 35px;
+  }
+  
+
+  form#contact input::placeholder {
+    color: #afafaf;
+  }
+  
+  form#contact textarea {
+    width: 100%;
+    height: 100px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom: 1px solid #9bdbf8;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    font-size: 15px;
+    font-weight: 300;
+    color: #2a2a2a;
+    padding: 0px 0px;
+    margin-bottom: 35px;
+  }
+  
+  form#contact textarea::placeholder {
+    color: #afafaf;
+  }
+  
+  form#contact button {
+    display: inline-block;
+    background-color: #ff695f;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    text-transform: capitalize;
+    padding: 12px 25px;
+    border-radius: 23px;
+    letter-spacing: 0.25px;
+    border: none;
+    outline: none;
+    transition: all .3s;
+  }
+  
+  form#contact button:hover {
+    background-color: #03a4ed;
+  }
+
+.item p {
+  text-align: center;
+}
+
+.owl-services .item .icon {
+  width: 45px;
+  height: 45px;
+  margin: 20px auto;
+}
+
 .area_list li a::before {
   content: '';
   position: absolute;
