--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -147,6 +147,7 @@ animation: lds-hourglass 1.2s infinite;
 
       video{
             -webkit-filter: brightness(130%); 
+            filter: brightness(130%); 
     }
     #Loader {
         width: 150px;
