--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8708,6 +8708,14 @@ p {
   } 
 }
 @media (max-width: 992px) {
+  .footer-contactus > div {
+    width: 40vw;
+  }
+  .footer-contactus {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
   .logos{
     margin-top: 30px!important;
   }
@@ -8784,6 +8792,47 @@ p {
 
 }
 
+@media (max-width: 768px) {
+  .footer-contactus > div {
+    width: 252px;
+  }
+  .footer-contactus {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
+
+@media (max-width: 425px) {
+  .footer-contactus > div {
+    width: 252px;
+  }
+  .footer-contactus {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
+@media (max-width: 375px) {
+  .footer-contactus > div {
+    width: 252px;
+  }
+  .footer-contactus {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
+@media (max-width: 320px) {
+  .footer-contactus > div {
+    width: 252px;
+  }
+  .footer-contactus {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
 .item {
   display: flex;
   flex-direction: column;
