--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
   }
 
   #responsiv_hero {
-    background-image: url(../images/resp/respon_hero.jpg);
+    background-image: url(../images/resp/respon_hero-min.webp);
     background-size: cover;
     background-position: center;
   }
